<?xml version="1.0" encoding="utf-8"?>
<com.pickstars.initializepopup.View.RadiusCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:rcv_cardBackgroundColor="@color/CardBackground"
    app:rcv_topLeftRadius="10dp"
    app:rcv_topRightRadius="10dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="RtlHardcoded,UseCompoundDrawables">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_tip"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/dialog_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/BlackWhiteColor"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ReadTheAgreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/dialog_message"
                android:textColor="@color/BlackWhiteColor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ReadTheAgreementLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/CheckBox"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:clickable="false"
                android:focusable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/CheckBoxText"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/CloseButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/dialog_decline" />

            <Button
                android:id="@+id/AgreeButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/dialog_accept" />
        </LinearLayout>

    </LinearLayout>

</com.pickstars.initializepopup.View.RadiusCardView>